--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
     "grunt-contrib-compress": "~0.8.0",
     "grunt-exec": "~0.4.5",
     "assemble": "~0.4.42",
-    "grunt-sass": "~0.18.1",
+    "grunt-sass": "*",
     "grunt-notify": "^0.4.0",
     "grunt-wiredep": "^1.7.0",
     "basic-auth": "1.0.3",
     "express": "4.13.0"
   },
   "scripts": {
-    "postinstall": "bower install && grunt build",
+    "postinstall": "",
     "start": "node server.js"
   },
   "engines": {
